added thank you page

--- a/core/templates/core/faq.html
+++ b/core/templates/core/faq.html
@@ -1,5 +1,8 @@
+<div class="container pb-4">
+  <h2 class="pb-2 border-bottom">FAQ</h2>
+</div>
 <div class="container pt-4 text-center">
-<h2>FAQ</h2>
+
 
 <div class="accordion" id="accordionExample">
     {% for faq in faqs %}
