--- a/core/templates/core/benefits.html
+++ b/core/templates/core/benefits.html
@@ -1,14 +1,14 @@
 {% load static %}
 <div class="container px-4 py-5" id="hanging-icons">
-    <h2 class="pb-2 border-bottom">Benefits</h2>
+    <h2 class="pb-2 border-bottom">Why hire us to build a landing page?</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
         <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
           <img src="{% static 'img/growth.png' %}" alt="Growth" width="30" height="30">
         </div>
         <div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <h3 class="fs-2 text-body-emphasis">More business your way</h3>
+          <p>Did you know 80% of advertising should be done in the hero section? We embed marketing techniques throughout the website to optimize conversion rate</p>
         </div>
       </div>
       <div class="col d-flex align-items-start">
@@ -16,8 +16,8 @@
             <img src="{% static 'img/entrepreneur.png' %}" alt="Entrepreneur" width="30" height="30">
         </div>
         <div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <h3 class="fs-2 text-body-emphasis">More time for you</h3>
+          <p>Your time is valuable and you should focus on doing what matters to you the most. Never waste a second figuring out a technical issue. Let us worry about that for you</p>
         </div>
       </div>
       <div class="col d-flex align-items-start">
@@ -25,8 +25,8 @@
             <img src="{% static 'img/teamwork.png' %}" alt="Team work" width="30" height="30">
         </div>
         <div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <h3 class="fs-2 text-body-emphasis">Hassle free</h3>
+          <p>Our support continues even after we've deilvered. We make sure your site is up and running 24/7 and this is a guarantee</p>
         </div>
       </div>
     </div>
