--- a/core/templates/core/cta.html
+++ b/core/templates/core/cta.html
@@ -1,8 +1,8 @@
-<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+<div class="container ">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
-        <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Vertically centered hero sign-up form</h1>
-        <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+        <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Convert More, Stress Less: Your Perfect Landing Page Awaits</h1>
+        <p class="col-lg-10 fs-4">Ready to get started? Get your free guide today!</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="POST">
@@ -18,9 +18,9 @@
           </div>
  
 
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Get my free guide!</button>
           <hr class="my-4">
-          <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
+          <small class="text-body-secondary">We'll never share your email with anyone else.</small>
         </form>
       </div>
     </div>
