--- a/core/templates/core/hero.html
+++ b/core/templates/core/hero.html
@@ -1,25 +1,25 @@
 {% load static %}
-<div class="container col-xxl-8 px-4 py-5">
+<div class="container ">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="{% static 'img/hero.png' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src="{% static 'img/hero2.png' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"  loading="lazy">
       </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Your Success Starts Here: Expert Landing Pages for Maximum Impact</h1>
+        <p class="lead">We harness scientifically proven techniques to craft landing pages that are engineered for maximum conversions. Say goodbye to guesswork and hello to results-driven design</p>
+        <div class="justify-content-md-start">
             <form method="POST">
                 {% csrf_token %}
                 <div class="row">
-                    <div class="col">
-                        <div class="mb-3">
+                    <div class="col-6">
+                        <div>
                             <label for="exampleInputPassword1" class="form-label">Name</label>
                             <input type="text" class="form-control" name="name">
                         </div>
                     </div>
 
-                    <div class="col">
-                        <div class="mb-3">
+                    <div class="col-6">
+                        <div>
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
                             <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
                             
@@ -28,7 +28,7 @@
                 </div>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 <br>
-                <button type="submit" class="btn btn-primary">Get my free demo!</button>
+                <button type="submit" class="btn btn-primary">Get my free guide!</button>
               </form>
         </div>
       </div>
