--- a/core/templates/core/social_proof.html
+++ b/core/templates/core/social_proof.html
@@ -1,6 +1,9 @@
 {% load static %}
+<div class="container pb-4">
+  <h2 class="pb-2 border-bottom">What does our customers say about us?</h2>
+</div>
 <section class="bg-light py-5 py-xl-8">
-    <div class="container">
+    <div class="container pt-5 pb-5">
       <div class="row justify-content-md-center">
         <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
           <h2 class="fs-6 text-secondary mb-2 text-uppercase text-center">Happy Customers</h2>
